# realtime-api-webrtc

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  run_project.sh  webrtc.md
.github/: copilot-instructions.md
backend/: .dockerignore  .env.example  .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_dev.sh  run_docker.sh  test_proxy.sh
backend/src/: main.py
backend/src/application/dto/: audio_dto.py  azure_dto.py
backend/src/application/interfaces/: azure_proxy_service.py
backend/src/application/services/: audio_upload_service.py  azure_proxy_service.py
backend/src/infrastructure/azure/: azure_openai_client.py
backend/src/infrastructure/configuration/: dependencies.py
backend/src/infrastructure/storage/: audio_blob_storage_client.py
backend/src/presentation/api/controllers/: audio_upload_controller.py  health_controller.py  realtime_proxy_controller.py  sessions_proxy_controller.py
backend/src/presentation/dto/: proxy_dto.py
backend/src/presentation/middleware/: cors_middleware.py
backend/src/shared/monitoring/: health.py
backend/src/shared/utils/: dict_utils.py  logging.py
backend/tests/: test_health.py
backend/tests/unit/application/: test_azure_proxy_service.py
docs/specs/: api-specification.md  application-architecture.md  backend-specification.md  frontend-specification.md
frontend/: package.json
frontend/src/: App.css  App.js
src/: App.css  App.js
